data/all_generated_tests/raw_wast_tests/br_table_TypeMismatchinControlFlowInstructions_2454.wast
;; 4. **Test: Forward Branch BrTable from within Block, Operand Type Mismatch**    - **Description**:      A `br_table` instructing to branch from within a `block`, the block expects an `f64` type but an `i32` is provided in `br_table`.    - **Constraint Checked**:      Checks the forward branch type mismatch when exiting blocks.    - **Related Type Mismatch**:      Forward branch type checks failing for blocks.

(assert_invalid
  (module (func 
    (block (result f64)
      (br_table 0 1 (i32.const 0))
    )
  ))
  "type mismatch"
)